--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 									-->
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										994-085-2869
+										+49-176-717-01773
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">gokhul.619@gmail.com</a>
+										<a href="#">gokhul.gopinathan@gmail.com</a>
 									</li>
 								</ul>
 							</div>
