Added substack content

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 					<section id="one">
 						<header class="major">
 							<h3>"Without data, you are just another person with an opinion"</h3>
-							<p><strong>-W. Edwards Deming</p></strong>
+							<p><strong>~ W. Edwards Deming</p></strong>
 						</header>
-						<p>I aspire to see the unusual in the usual. I believe insights from data differ with perception, and here I wish to show the world, how I perceive data. </p>
+						<p>Data Analyst with over 11 years of experience in different industries like Engineering, 
+							Fintech & the most recent being at a Media startup in Berlin, Germany. I aspire to bring an interesting perception to the boring data.</p>						
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -80,6 +81,21 @@
 
 				<!-- Three -->
 					<section id="three">
+						<h2>Latest On My Substack</h2>
+
+						<div id="substack-feed-embed"></div>
+						<script>
+				  		window.SubstackFeedWidget = {
+						substackUrl: "elementarydata.substack.com",
+						posts: 2
+				  		};
+						</script>
+						<script src="https://substackapi.com/embeds/feed.js" async></script>
+
+					</section>
+				
+				<!-- Four -->				
+					<section id="four">
 						<h2>Get In Touch</h2>
 						<!--
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -105,12 +121,12 @@
 										Chennai<br />
 										TamilNadu-600100<br />
 										India
-									</li>
-									-->
+									</li>									
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 										+49-176-717-01773
 									</li>
+									-->
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 										<a href="#">gokhul.gopinathan@gmail.com</a>
@@ -120,9 +136,9 @@
 						</div>
 					</section>
 
-				<!-- Four -->
+				<!-- Five -->
 				<!--
-					<section id="four">
+					<section id="five">
 						<h2>Elements</h2>
 
 						<section>
@@ -443,8 +459,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					<ul class="icons">
-						<li><a href="https://twitter.com/ed_anecdotes" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<ul class="icons">						
 						<li><a href="https://github.com/datspy" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/gokhul-mg/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>						
 						<li><a href="https://elementarydata.substack.com" class="iconify"><span class="iconify" data-icon="simple-icons:substack"></span></a></li>
