Updated dbt project

--- a/index.html
+++ b/index.html
@@ -28,28 +28,33 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
-							<h3>"Without data, you are just another person with an opinion"</h3>
-							<p><strong>~ W. Edwards Deming</p></strong>
-						</header>
-						<p>Data Analyst with over 11 years of experience in different industries like Engineering, 
-							Fintech & the most recent being at a Media startup in Berlin, Germany. I aspire to bring an interesting perception to the boring data.</p>						
-						<!-- <ul class="actions">
+						<h3>About Me</h3>						
+						<p>I am a Data Analyst who enjoys the time spent gathering, cleaning, engineering and analyzing the data. 
+							My experience in different industries like Engineering, Fintech & mass Media has enabled me to bring new perspectives to the boring data.
+							When I am not mining data for insights, I write blogs.</p>												
+							<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
 					</section>
-
 				<!-- Two -->
-					<section id="two">
-						<h2>Recent Work</h2>
+					<!-- <section id="two">
+						<body>
+						<q>
+							<p><blockquote><h3>"Without data, you are just another person with an opinion."</h3></blockquote></p>
+							<cite><b>~ W. Edwards Deming</b></cite>
+						</q>					  	
+					</section> -->
+				<!-- Three -->
+					<section id="three">
+						<h3>Projects On Github</h3>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://public.tableau.com/app/profile/gokhul#!/"><img src="images/thumbs/tableau.jpg" width=450 height=300 alt="" /></a>
-								<h3>Tableau Profile</h3>
-								<p>A peek into my visualization skills</p>
+								<a href="https://github.com/datspy/dbt_project_one"><img src="images/thumbs/dbt.jpg" width=200 height=200 alt="" /></a>
+								<h3>Data Engineering With DBT</h3>
+								<p>A DBT Project</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/datspy/ipl_analytics"><img src="images/thumbs/ipl.jpg" width=450 height=300 alt="" /></a>
+								<a href="https://github.com/datspy/ipl_analytics"><img src="images/thumbs/ipl.jpg" width=200 height=200 alt="" /></a>
 								<h3>IPL Analytics</h3>
 								<p>A brief analysis of the game</p>
 							</article>
@@ -75,13 +80,13 @@
 							</article> -->
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Work In Progress..</a></li>
+							<li><a href="https://github.com/datspy" class="button">Visit Github</a></li>
 						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Latest On My Substack</h2>
+				<!-- Four -->
+					<section id="four">
+						<h3>On Substack</h3>
 
 						<div id="substack-feed-embed"></div>
 						<script>
@@ -92,11 +97,15 @@
 						</script>
 						<script src="https://substackapi.com/embeds/feed.js" async></script>
 
+						<ul class="actions">
+							<li><a href="https://elementarydata.substack.com/" class="button">Visit Substack</a></li>
+						</ul>
+
 					</section>
 				
-				<!-- Four -->				
-					<section id="four">
-						<h2>Get In Touch</h2>
+				<!-- Five -->				
+					<section id="five">
+						<h3>Get In Touch</h3>
 						<!--
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
 						<div class="row">
@@ -136,9 +145,9 @@
 						</div>
 					</section>
 
-				<!-- Five -->
+				<!-- Six -->
 				<!--
-					<section id="five">
+					<section id="six">
 						<h2>Elements</h2>
 
 						<section>
