--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 				<!-- One -->
 					<section id="one">
 						<h3>About Me</h3>						
-						<p>I am a Data Analyst who enjoys the time spent gathering, cleaning, engineering and analyzing the data. 
-							My experience in different industries like Engineering, Fintech & mass Media has enabled me to bring new perspectives to the boring data.
-							When I am not mining data for insights, I write blogs.</p>												
+						<p>I am a Data Analyst who enjoys the time spent gathering, cleaning and analyzing the data. I have experienced the joy of data modelling and 
+							engineering the journey of data from source to the database. My experience in different industries like Engineering, Fintech & mass Media has enabled me 
+							to bring new perspectives to the boring data. When I am not mining data for insights, I write blogs.</p>												
 							<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
@@ -49,21 +49,21 @@
 						<h3>Projects On Github</h3>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/datspy/dbt_project_one"><img src="images/thumbs/dbt.jpg" width=200 height=200 alt="" /></a>
+								<a href="https://github.com/datspy/dbt_project_one"><img src="images/thumbs/dbt.jpg" width=250 height=200 alt="" /></a>
 								<h3>Data Engineering With DBT</h3>
 								<p>A DBT Project</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/datspy/ipl_analytics"><img src="images/thumbs/ipl.jpg" width=200 height=200 alt="" /></a>
+								<a href="https://github.com/datspy/ipl_analytics"><img src="images/thumbs/ipl_logo.jpg" width=250 height=200 alt="" /></a>
 								<h3>IPL Analytics</h3>
 								<p>A brief analysis of the game</p>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="https://github.com/datspy/news_app_ab_testing"><img src="images/thumbs/ab_testing_icon.png" width=250 height=200 alt="" /></a>
+								<h3>AB Testing Of App UI Change</h3>
+								<p>The approach and process behind AB Testing</p>
+							</article>
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
